# TODO-FastAPI-SQLAlchemy-async

./: .gitignore  README.md  main.py  pyproject.toml
backend/: api.py  database.py  router.py  schemas.py
frontend/: package.json
frontend/src/: App.vue
frontend/src/components/: TaskList.vue  TaskModal.vue
todo/: crud.py  main.py  models.py  router.py
