[tool.poetry]
name = "fastapi_todo"
version = "0.1.0"
description = "I think that makes simple TODO - is the first step to understand mechanics of any pl, tool, api, framework or enything else"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
python-multipart = "^0.0.5"
aiosqlite = "^0.17.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

